# Refine_Protobuf_Mutator

./: .gitignore  CMakeLists.txt
afl_test/: Makefile  harness.cpp  run_fuzz.sh
afl_test/in/: i  ii  newi
mutation_test/: CMakeLists.txt  mutator_test.cpp
mutation_test/include/: general_setting.h  util.h  util_cout.h  util_string.h
postprocess/: CMakeLists.txt  openfhe_bgv_postprocess.h  openfhe_ckks_postprocess.h  post_util.h  postprocess.cpp  postprocess.h
proto/: openfhe_bgv.proto  openfhe_ckks.proto  proto_setting.h  seal_bgv.proto  seal_ckks.proto
proto_seed/: CMakeLists.txt  create_proto_input.cpp
proto_seed/afl_text_in/openfhe_bgv/1/: 0.txt  1.txt  2.txt  3.txt
proto_seed/afl_text_in/openfhe_ckks/1/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
proto_seed/crash_text_in/: 1
protobuf_mutator/: CMakeLists.txt  binary_format.cc  binary_format.h  field_instance.h  mutate_util.cpp  mutate_util.h  mutator.cc  mutator.cpp  mutator.h  proto_util.cc  proto_util.cpp  proto_util.h  protobuf.h  random.h  text_format.cc  text_format.h  utf8_fix.cc  utf8_fix.h  weighted_reservoir_sampler.h
src/: CMakeLists.txt  afl_mutator.cc  afl_mutator.cpp  afl_mutator.h  fhe_protobuf_mutator.cc  fhe_protobuf_mutator.cpp  fhe_protobuf_mutator.h
src/proto/: CMakeLists.txt  create_proto_input.cc  create_proto_input.cpp  fhe.proto  openfhe_bgv.proto  openfhe_ckks.proto  proto_test.cpp  proto_text_seed.h
test/: CMakeLists.txt  field.proto  mutator_test.cpp  mutator_test_proto3.proto  nest.proto  test.cpp  xml.proto
test/include/: general_setting.h  util.h  util_cout.h
