set(FHE_PROTO_SRC fhe.pb.cc)
# set(FHE_PROTO_SRC openfhe_ckks.pb.cc)
add_executable(create_proto_input create_proto_input.cpp ${FHE_PROTO_SRC})
target_include_directories(create_proto_input PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(create_proto_input protobuf)

# add_executable(ptest proto_test.cpp ${FHE_PROTO_SRC})
# target_include_directories(ptest PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# target_include_directories(ptest PUBLIC ${CMAKE_SOURCE_DIR}/src)
# target_link_libraries(ptest protobuf-mutator)
# target_link_libraries(ptest protobuf)
# set(POSTPROCESS_SRC fhe_protobuf_mutator.cc)
# add_library(fhe_protobuf_mutator SHARED ${POSTPROCESS_SRC} ${FHE_PROTO_SRC})
# add_dependencies(fhe_protobuf_mutator aflpm)
# target_link_libraries(fhe_protobuf_mutator aflpm)